objects/vlocity_ins__RelationshipGraphNodeType__c.object
<CustomObject>
    <description>Metadata for a specific object type in the Relationship Graph, including object fields.</description>
    <fields>
        <fullName>vlocity_ins__FieldList__c</fullName>
        <description>JSON code that lists the fields to return for this node type in this graph.</description>
        <label>Field List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>Data pack support.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__GraphId__c</fullName>
        <description>Id of the relationship graph to which this node type definition belongs.</description>
        <label>Relationship Graph</label>
        <referenceTo>vlocity_ins__RelationshipGraph__c</referenceTo>
        <relationshipLabel>Relationship Graph Node Types</relationshipLabel>
        <relationshipName>RelationshipGraphNodeTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectApiName__c</fullName>
        <description>Object type for this node, such as Contact. For a custom object, include the namespace, for example vlocity_ins__Group__c.</description>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <description>Optional record type for the object, such as ServiceAggregator for an Account object.</description>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relationship Graph Node Type</label>
    <nameField>
        <label>Relationship Graph Node Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Graph Node Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>